--- a/css/style.css
+++ b/css/style.css
@@ -382,8 +382,11 @@ section {
 }
 
 .services .box-container .box i {
+  border: 1px solid #080357;
+  border-radius: 50%;
   font-size: 4rem;
-  color: darkslateblue;
+  color: darkslateblue; 
+  padding: 20px 20px;
   margin-bottom: 2rem;
 }
 
@@ -802,3 +805,17 @@ section {
 }
 
 /*# sourceMappingURL=style.css.map */
+.load {
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid darkslateblue; /* Blue */
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+ 
