--- a/appointment/style.css
+++ b/appointment/style.css
@@ -9,9 +9,8 @@
 
 body{
   min-height: 100vh;
-  background: url(background.jpg) no-repeat;
+  background: url(/images/back.bg.jpg) no-repeat;
   background-size: cover;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -24,7 +23,7 @@ body{
 }
 
 .contact-info{
-  color: #fff;
+  color: black;
   max-width: 500px;
   line-height: 65px;
   padding-left: 50px;
@@ -34,6 +33,9 @@ body{
 .contact-info i{
   margin-right: 20px;
   font-size: 25px;
+  border-radius: 50%;
+  border: 2px solid  black;
+  padding: 20px;
 }
 
 .contact-form{
@@ -46,7 +48,7 @@ body{
 }
 
 .contact-form h2{
-  color: #fff;
+  color:black;
   text-align: center;
   font-size: 35px;
   text-transform: uppercase;
@@ -89,7 +91,7 @@ body{
 
 .contact-form .send-btn{
   float: right;
-  background: #2E94E3;
+  background:black;
   color: #fff;
   border: none;
   width: 120px;
@@ -105,7 +107,7 @@ body{
 }
 
 .contact-form .send-btn:hover{
-  background: #0582E3;
+  background: blue;
 }
 
 @media screen and (max-width: 950px){
