--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   transition: all .2s linear;
 }
 
+
 html {
   font-size: 62.5%;
   overflow-x: hidden;
@@ -55,6 +56,7 @@ section {
 .heading h1 {
   font-size: 4rem;
   color: #fff;
+  text-decoration: none !important;
 }
 
 .btn {
@@ -75,6 +77,7 @@ section {
 
 
 .header {
+  text-decoration: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -92,17 +95,46 @@ section {
           justify-content: space-between;
   padding: 1.5rem 9%;
 }
-
+.navbar{
+  position: relative;
+}
+ /*
 .header .navbar a {
   font-size: 1.7rem;
   color: #aaa;
   display: inline-block;
-  margin: 0 1rem;
+ 
   
 }
 
+
 .header .navbar a:hover {
   color: darkslateblue;
+}
+*/
+.header .navbar  a{
+  position: relative;
+  color: #fff;
+  font-size: 1.7em;
+  font-weight: 500;
+  text-decoration: none;
+  margin: 0 1rem;
+  transition: 0.3s ease;
+}
+
+.header .navbar  a:before{
+  content: '';
+  position: absolute;
+  background: #fff;
+  width: 0;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s ease;
+}
+
+.header .navbar a:hover:before{
+  width: 100%;
 }
 
 .header .btn {
@@ -402,6 +434,7 @@ section {
   line-height: 2;
 }
 #more {display: none;}
+#more0 {display: none;}
 #more1 {display: none;}
 #more2 {display: none;}
 #more3 {display: none;}
@@ -623,6 +656,7 @@ section {
   padding: 3rem 2rem;
   background-attachment: fixed;
   text-align: center;
+
 }
 
 .banner .content span {
@@ -802,6 +836,9 @@ section {
   .banner .content h3 {
     font-size: 2.7rem;
   }
+  .border{
+    width: 200px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
@@ -963,4 +1000,170 @@ section {
     top: 10px;
     border-left: 8px solid #FFA502;
     border-radius: 4px;
+  }
+  .about_us {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 2rem;
+  }
+  
+  .about_us .content {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 42rem;
+            flex: 1 1 42rem;
+  }
+  
+  .about_us  .content span {
+    font-size: 2rem;
+    color: darkslateblue;
+  }
+  
+  .about_us .content h3 {
+    font-size: 3rem;
+    color: #fff;
+  }
+  
+  .about_us .content p {
+    font-size: 1.4rem;
+    color: #aaa;
+    padding: 1rem 0;
+    line-height: 2;
+  }
+  
+  .about_us .box-container {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 42rem;
+            flex: 1 1 42rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 1.5rem;
+  }
+  
+  .about_us .box-container .box {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 20rem;
+            flex: 1 1 20rem;
+    border-radius: 1rem;
+    padding: 2rem;
+    background:#A7B0CA ;
+    
+  }
+  
+  .about_us .box-container .box:hover {
+    border: 0.2rem solid darkslateblue;
+  }
+  
+  .about_us .box-container .box p {
+    font-size: 1.4rem;
+    padding-bottom: 1rem;
+    line-height: 2;
+    color: black;
+  }
+  
+  .about_us .box-container .box .user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 1rem;
+  }
+  
+  .about_us .box-container .box .user img {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+  }
+  
+  .about_us .box-container .box .user h3 {
+    font-size: 1.7rem;
+    color: #fff;
+  }
+  .about-section {
+    margin-top: 5rem;
+    margin-bottom: 10rem;
+  }
+  
+  .about-heading {
+    text-transform: uppercase;
+  }
+  
+  .about-heading .about-heading-upper {
+    display: block;
+    font-size: 1rem;
+    font-weight: 800;
+    color: white;
+  }
+  
+  .about-heading .about-heading-lower {
+    font-weight: bolder;
+  color: transparent;
+  -webkit-text-stroke: 0.1rem #fff;
+  font-size: 4vw;
+  display: block;
+  }
+  
+  .bg-faded {
+    background-color:#080357 ;
+  }
+
+  .about-button .btn-color{
+    background: darkslateblue;
+    font-weight: bold;
+    color: #fff;
+  }
+  .about1 {
+    position: relative;
+  }
+  
+  @media (min-width: 992px) {
+    .about1 .about-img {
+      width: 75%;
+      float: right;
+    }
+    .about1 .about-text {
+      left: 0;
+      width: 60%;
+      margin-top: 3rem;
+      position: absolute;
+    }
+    .about1 .about-text .about-button {
+      width: 100%;
+      left: 0;
+      position: absolute;
+      bottom: -2rem;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .about1 .about-text {
+      width: 45%;
+    }
+  }
+  
+  
+  .about-us .box-container .box .user span {
+    color: black;
+    font-size: 1.5rem;
+  }
+  .motto{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 2rem;
   }
