--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   outline: none;
   border: none;
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: ;
   -webkit-transition: all .2s linear;
   transition: all .2s linear;
 }
